test/e2e/testdata/metrics-stat-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: http-stat-name-backend-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-stat-name
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: http-stat-name-backend-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /http
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: http-route-stat-name
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: http-route-stat-name
  telemetry:
    metrics:
      routeStatName: "%ROUTE_NAMESPACE%/%ROUTE_NAME%"
